--- a/android/build.gradle
+++ b/android/build.gradle
@@ -50,5 +50,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Jitsi Meet from https://github.com/jitsi/jitsi-maven-repository/tree/master/releases/org/jitsi/react/jitsi-meet-sdk
-    implementation ('org.jitsi.react:jitsi-meet-sdk:3.3.0') { transitive = true }
+       implementation ('org.jitsi.react:jitsi-meet-sdk:3.3.0') {
+            transitive = true
+            exclude group: 'com.facebook.react', module: 'react-native-webrtc'
+        }
 }
